Refactor core architecture for performance and clarity
- Convert Services and Controllers from records to classes to support AOP proxies.
- Fix ApplicationContext and DependencyGraph to correctly handle interface-based dependencies and AOP proxy creation.
- Implement high-performance, zero-reflection routing using LambdaMetafactory.
- Implement REQUIRED transaction propagation with ThreadLocal connection reuse.
- Enhance Request with type-safe attributes and integrated explicit body validation.
- Remove redundant and broken ValidationMiddleware.
- Update documentation and examples to reflect the new architectural standards.